--- a/mimir-setter/package.json
+++ b/mimir-setter/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "tsparticles": "^2.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
