--- a/mimir-setter/package.json
+++ b/mimir-setter/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.9",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
